Reformat, update, reposition content & copy; probably wrong but add div .running to fix spacing

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  }
 
 body {
-  background-color: #8e8e8e;
+  background-color: #8c8c8c;
   font-family: sans-serif;
   /* font-size: 10px; */
 }
@@ -12,6 +12,7 @@ body {
   background-color: #ffffff;
   margin: 0 auto;
   width: 420px;
+  height: 736px;
 }
 
 nav {
@@ -28,7 +29,7 @@ nav {
 
 
 /* ALIGNMENT */
-.content, .location, .non-running { 
+.content, .location, .running, .non-running { 
 display: flex;
 justify-content: space-between;
 flex-flow: row wrap;
@@ -87,15 +88,18 @@ font-size: 17px;
   font-size: 15px;
   }
 
-.service {
-  font-size: 17px;
-}
-
 .non-running, .non-running h3, .non-running h4, .fa-chevron-right {
   color: #8c8c8c !important;
 }
 
+.non-running h2 {
+font-size: 17px;
+padding-top: 15px;
+}
 
+.RD {
+  font-size: 12px;
+}
 
 hr {
   display: block;
